Hero layout on mobile fixed

--- a/css/queries.css
+++ b/css/queries.css
@@ -28,7 +28,7 @@
   /* HERO */
   #hero .section-card {
     padding: 3rem 2rem;
-    margin-top: 5rem;
+    margin-top: 1rem;
   }
 
   #hero p {
